--- a/src/unity/Assets/StreamingAssets/settings.json
+++ b/src/unity/Assets/StreamingAssets/settings.json
@@ -4,8 +4,14 @@
 		{
 			"name" : "Acer",
 			"ip" : "192.168.1.7",
-			"port" : 50020,
-			"detect_surface" : false
+			"port" : 50404,
+			"detect_surface" : true
+		},
+		{
+			"name" : "Lenovo",
+			"ip" : "192.168.1.3",
+			"port" : 49565,
+			"detect_surface" : true
 		}
 	]
 }
