--- a/src/unity/Assets/StreamingAssets/settings.json
+++ b/src/unity/Assets/StreamingAssets/settings.json
@@ -5,7 +5,17 @@
 			"name" : "Acer",
 			"ip" : "192.168.1.7",
 			"port" : 50404,
-			"detect_surface" : true
+			"surface_name" : "screen",
+			"detect_surface" : true,
+			"initially_active" : true
+		},
+		{
+			"name" : "Lenovo",
+			"ip" : "192.168.1.3",
+			"port" : 99999,
+			"surface_name" : "screen",
+			"detect_surface" : true,
+			"initially_active" : false
 		}
 	]
 }
