--- a/src/unity/Assets/StreamingAssets/pupil_config.json
+++ b/src/unity/Assets/StreamingAssets/pupil_config.json
@@ -2,20 +2,20 @@
 	"setup_id" : "Testeinstellungen",
 	"pupil_clients" : [
 		{
-			"name" : "Acer",
-			"ip" : "192.168.1.7",
-			"port" : 50404,
+			"name" : "Lenovo",
+			"ip" : "192.168.1.3",
+			"port" : 49565,
 			"surface_name" : "screen",
 			"detect_surface" : true,
 			"initially_active" : true
 		},
 		{
-			"name" : "Lenovo",
-			"ip" : "192.168.1.3",
-			"port" : 99999,
+			"name" : "Acer",
+			"ip" : "192.168.1.7",
+			"port" : 50404,
 			"surface_name" : "screen",
 			"detect_surface" : true,
-			"initially_active" : true
+			"initially_active" : false
 		}
 	]
 }
