--- a/src/unity/Assets/StreamingAssets/pupil_config.json
+++ b/src/unity/Assets/StreamingAssets/pupil_config.json
@@ -4,7 +4,7 @@
             "name": "Lenovo",
             "ip": "192.168.1.3",
             "port": "49565",
-            "surface_name": "oo",
+            "surface_name": "screen",
             "detect_surface": true,
             "initially_active": true
         },
