--- a/src/unity/Assets/StreamingAssets/pupil_config.json
+++ b/src/unity/Assets/StreamingAssets/pupil_config.json
@@ -9,12 +9,12 @@
             "initially_active": true
         },
         {
-            "name": "Marco",
+            "name": "Marcooobb",
             "ip": "127.0.0.1",
             "port": "50020",
             "surface_name": "screen",
             "detect_surface": true,
-            "initially_active": false
+            "initially_active": true
         }
     ],
     "setup_id": "Testeinstellungen"
