--- a/src/unity/Assets/StreamingAssets/pupil_config.json
+++ b/src/unity/Assets/StreamingAssets/pupil_config.json
@@ -2,16 +2,16 @@
     "pupil_clients": [
         {
             "name": "Marco",
-            "ip": "192.168.1.7",
-            "port": "50404",
+            "ip": "192.168.137.55",
+            "port": "50020",
             "surface_name": "screen",
             "detect_surface": true,
             "initially_active": true
         },
         {
-            "name": "Marcooobb",
-            "ip": "127.0.0.1",
-            "port": "50020",
+            "name": "Kevin",
+            "ip": "192.168.137.139",
+            "port": "50030",
             "surface_name": "screen",
             "detect_surface": true,
             "initially_active": true
