--- a/src/unity/App/release/app_Data/StreamingAssets/pupil_config.json
+++ b/src/unity/App/release/app_Data/StreamingAssets/pupil_config.json
@@ -2,7 +2,7 @@
     "pupil_clients": [
         {
             "name": "Client 1",
-            "ip": "192.168.1.7",
+            "ip": "192.168.1.X",
             "port": "50404",
             "surface_name": "screen",
             "detect_surface": true,
@@ -10,11 +10,11 @@
         },
         {
             "name": "Local Client",
-            "ip": "127.0.0.1",
+            "ip": "127.0.0.X",
             "port": "50020",
             "surface_name": "screen",
             "detect_surface": true,
-            "initially_active": false
+            "initially_active": true
         }
     ],
     "setup_id": "Testeinstellungen"
